--- a/orthogonal_projection.ipynb
+++ b/orthogonal_projection.ipynb
@@ -2,14 +2,14 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "pygame 2.4.0 (SDL 2.26.4, Python 3.10.11)\n",
+      "pygame 2.5.2 (SDL 2.28.3, Python 3.11.4)\n",
       "Hello from the pygame community. https://www.pygame.org/contribute.html\n"
      ]
     }
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -44,8 +44,8 @@
      "traceback": [
       "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[1;31merror\u001b[0m                                     Traceback (most recent call last)",
-      "\u001b[1;32mc:\\Users\\willi\\principles_of_programming\\Graphics_Engine\\orthogonal_projection.ipynb Cell 2\u001b[0m line \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m    <a href='vscode-notebook-cell:/c%3A/Users/willi/principles_of_programming/Graphics_Engine/orthogonal_projection.ipynb#W1sZmlsZQ%3D%3D?line=171'>172</a>\u001b[0m clock\u001b[39m.\u001b[39mtick(\u001b[39m10\u001b[39m)\n\u001b[0;32m    <a href='vscode-notebook-cell:/c%3A/Users/willi/principles_of_programming/Graphics_Engine/orthogonal_projection.ipynb#W1sZmlsZQ%3D%3D?line=172'>173</a>\u001b[0m \u001b[39m# accept movement and rotation inputs\u001b[39;00m\n\u001b[1;32m--> <a href='vscode-notebook-cell:/c%3A/Users/willi/principles_of_programming/Graphics_Engine/orthogonal_projection.ipynb#W1sZmlsZQ%3D%3D?line=173'>174</a>\u001b[0m theta, phi, psi \u001b[39m=\u001b[39m \u001b[39minput\u001b[39;49m(theta, phi, psi)\n\u001b[0;32m    <a href='vscode-notebook-cell:/c%3A/Users/willi/principles_of_programming/Graphics_Engine/orthogonal_projection.ipynb#W1sZmlsZQ%3D%3D?line=174'>175</a>\u001b[0m \u001b[39m# rotate basis vectors\u001b[39;00m\n\u001b[0;32m    <a href='vscode-notebook-cell:/c%3A/Users/willi/principles_of_programming/Graphics_Engine/orthogonal_projection.ipynb#W1sZmlsZQ%3D%3D?line=175'>176</a>\u001b[0m w, u, v \u001b[39m=\u001b[39m rotate_basis(theta, phi, psi)\n",
-      "\u001b[1;32mc:\\Users\\willi\\principles_of_programming\\Graphics_Engine\\orthogonal_projection.ipynb Cell 2\u001b[0m line \u001b[0;36minput\u001b[1;34m(theta, phi, psi)\u001b[0m\n\u001b[0;32m    <a href='vscode-notebook-cell:/c%3A/Users/willi/principles_of_programming/Graphics_Engine/orthogonal_projection.ipynb#W1sZmlsZQ%3D%3D?line=130'>131</a>\u001b[0m         \u001b[39mif\u001b[39;00m event\u001b[39m.\u001b[39mkey \u001b[39m==\u001b[39m pygame\u001b[39m.\u001b[39mK_ESCAPE:\n\u001b[0;32m    <a href='vscode-notebook-cell:/c%3A/Users/willi/principles_of_programming/Graphics_Engine/orthogonal_projection.ipynb#W1sZmlsZQ%3D%3D?line=131'>132</a>\u001b[0m             pygame\u001b[39m.\u001b[39mquit()\n\u001b[1;32m--> <a href='vscode-notebook-cell:/c%3A/Users/willi/principles_of_programming/Graphics_Engine/orthogonal_projection.ipynb#W1sZmlsZQ%3D%3D?line=133'>134</a>\u001b[0m keys \u001b[39m=\u001b[39m pygame\u001b[39m.\u001b[39;49mkey\u001b[39m.\u001b[39;49mget_pressed()\n\u001b[0;32m    <a href='vscode-notebook-cell:/c%3A/Users/willi/principles_of_programming/Graphics_Engine/orthogonal_projection.ipynb#W1sZmlsZQ%3D%3D?line=134'>135</a>\u001b[0m \u001b[39m# rotate about y-axis: left, right\u001b[39;00m\n\u001b[0;32m    <a href='vscode-notebook-cell:/c%3A/Users/willi/principles_of_programming/Graphics_Engine/orthogonal_projection.ipynb#W1sZmlsZQ%3D%3D?line=135'>136</a>\u001b[0m \u001b[39mif\u001b[39;00m keys[pygame\u001b[39m.\u001b[39mK_LEFT]:\n",
+      "Cell \u001b[1;32mIn[2], line 174\u001b[0m\n\u001b[0;32m    172\u001b[0m clock\u001b[38;5;241m.\u001b[39mtick(\u001b[38;5;241m10\u001b[39m)\n\u001b[0;32m    173\u001b[0m \u001b[38;5;66;03m# accept movement and rotation inputs\u001b[39;00m\n\u001b[1;32m--> 174\u001b[0m theta, phi, psi \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;43minput\u001b[39;49m\u001b[43m(\u001b[49m\u001b[43mtheta\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mphi\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mpsi\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m    175\u001b[0m \u001b[38;5;66;03m# rotate basis vectors\u001b[39;00m\n\u001b[0;32m    176\u001b[0m w, u, v \u001b[38;5;241m=\u001b[39m rotate_basis(theta, phi, psi)\n",
+      "Cell \u001b[1;32mIn[2], line 134\u001b[0m, in \u001b[0;36minput\u001b[1;34m(theta, phi, psi)\u001b[0m\n\u001b[0;32m    131\u001b[0m         \u001b[38;5;28;01mif\u001b[39;00m event\u001b[38;5;241m.\u001b[39mkey \u001b[38;5;241m==\u001b[39m pygame\u001b[38;5;241m.\u001b[39mK_ESCAPE:\n\u001b[0;32m    132\u001b[0m             pygame\u001b[38;5;241m.\u001b[39mquit()\n\u001b[1;32m--> 134\u001b[0m keys \u001b[38;5;241m=\u001b[39m \u001b[43mpygame\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mkey\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mget_pressed\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m    135\u001b[0m \u001b[38;5;66;03m# rotate about y-axis: left, right\u001b[39;00m\n\u001b[0;32m    136\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m keys[pygame\u001b[38;5;241m.\u001b[39mK_LEFT]:\n",
       "\u001b[1;31merror\u001b[0m: video system not initialized"
      ]
     }
@@ -268,7 +268,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.11"
+   "version": "3.11.4"
   },
   "orig_nbformat": 4
  },
