--- a/perspective_projection.ipynb
+++ b/perspective_projection.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -32,16 +32,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\willi\\AppData\\Local\\Temp\\ipykernel_14444\\1404273014.py:63: RuntimeWarning: divide by zero encountered in divide\n",
+      "C:\\Users\\willi\\AppData\\Local\\Temp\\ipykernel_3740\\1161049136.py:64: RuntimeWarning: divide by zero encountered in divide\n",
       "  p_prime =  p_prime * d/p_prime[2]\n",
-      "C:\\Users\\willi\\AppData\\Local\\Temp\\ipykernel_14444\\1404273014.py:63: RuntimeWarning: invalid value encountered in divide\n",
+      "C:\\Users\\willi\\AppData\\Local\\Temp\\ipykernel_3740\\1161049136.py:64: RuntimeWarning: invalid value encountered in divide\n",
       "  p_prime =  p_prime * d/p_prime[2]\n"
      ]
     },
@@ -52,8 +52,8 @@
      "traceback": [
       "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[1;31merror\u001b[0m                                     Traceback (most recent call last)",
-      "\u001b[1;32mc:\\Users\\willi\\Documents\\3D\\Computer-Graphics\\perspective_projection.ipynb Cell 2\u001b[0m line \u001b[0;36m3\n\u001b[0;32m    <a href='vscode-notebook-cell:/c%3A/Users/willi/Documents/3D/Computer-Graphics/perspective_projection.ipynb#W1sZmlsZQ%3D%3D?line=359'>360</a>\u001b[0m pygame\u001b[39m.\u001b[39mdraw\u001b[39m.\u001b[39mrect(window, (\u001b[39m0\u001b[39m, \u001b[39m0\u001b[39m, \u001b[39m0\u001b[39m), pygame\u001b[39m.\u001b[39mRect(\u001b[39m0\u001b[39m, \u001b[39m0\u001b[39m, width, height))\n\u001b[0;32m    <a href='vscode-notebook-cell:/c%3A/Users/willi/Documents/3D/Computer-Graphics/perspective_projection.ipynb#W1sZmlsZQ%3D%3D?line=360'>361</a>\u001b[0m \u001b[39m# accept input\u001b[39;00m\n\u001b[1;32m--> <a href='vscode-notebook-cell:/c%3A/Users/willi/Documents/3D/Computer-Graphics/perspective_projection.ipynb#W1sZmlsZQ%3D%3D?line=361'>362</a>\u001b[0m c, theta, phi, psi \u001b[39m=\u001b[39m \u001b[39minput\u001b[39;49m(c, theta, phi, psi)\n\u001b[0;32m    <a href='vscode-notebook-cell:/c%3A/Users/willi/Documents/3D/Computer-Graphics/perspective_projection.ipynb#W1sZmlsZQ%3D%3D?line=362'>363</a>\u001b[0m \u001b[39m# set framerate\u001b[39;00m\n\u001b[0;32m    <a href='vscode-notebook-cell:/c%3A/Users/willi/Documents/3D/Computer-Graphics/perspective_projection.ipynb#W1sZmlsZQ%3D%3D?line=363'>364</a>\u001b[0m clock\u001b[39m.\u001b[39mtick(\u001b[39m60\u001b[39m)\n",
-      "\u001b[1;32mc:\\Users\\willi\\Documents\\3D\\Computer-Graphics\\perspective_projection.ipynb Cell 2\u001b[0m line \u001b[0;36m2\n\u001b[0;32m    <a href='vscode-notebook-cell:/c%3A/Users/willi/Documents/3D/Computer-Graphics/perspective_projection.ipynb#W1sZmlsZQ%3D%3D?line=219'>220</a>\u001b[0m         pygame\u001b[39m.\u001b[39mmouse\u001b[39m.\u001b[39mset_pos(width\u001b[39m/\u001b[39m\u001b[39m2\u001b[39m, height\u001b[39m/\u001b[39m\u001b[39m2\u001b[39m)\n\u001b[0;32m    <a href='vscode-notebook-cell:/c%3A/Users/willi/Documents/3D/Computer-Graphics/perspective_projection.ipynb#W1sZmlsZQ%3D%3D?line=220'>221</a>\u001b[0m \u001b[39m# keys held\u001b[39;00m\n\u001b[1;32m--> <a href='vscode-notebook-cell:/c%3A/Users/willi/Documents/3D/Computer-Graphics/perspective_projection.ipynb#W1sZmlsZQ%3D%3D?line=221'>222</a>\u001b[0m keys \u001b[39m=\u001b[39m pygame\u001b[39m.\u001b[39;49mkey\u001b[39m.\u001b[39;49mget_pressed()\n\u001b[0;32m    <a href='vscode-notebook-cell:/c%3A/Users/willi/Documents/3D/Computer-Graphics/perspective_projection.ipynb#W1sZmlsZQ%3D%3D?line=222'>223</a>\u001b[0m \u001b[39m# movement forward, backward, left, right\u001b[39;00m\n\u001b[0;32m    <a href='vscode-notebook-cell:/c%3A/Users/willi/Documents/3D/Computer-Graphics/perspective_projection.ipynb#W1sZmlsZQ%3D%3D?line=223'>224</a>\u001b[0m \u001b[39mif\u001b[39;00m keys[pygame\u001b[39m.\u001b[39mK_w]:\n",
+      "Cell \u001b[1;32mIn[10], line 372\u001b[0m\n\u001b[0;32m    370\u001b[0m pygame\u001b[38;5;241m.\u001b[39mdraw\u001b[38;5;241m.\u001b[39mrect(window, (\u001b[38;5;241m0\u001b[39m, \u001b[38;5;241m0\u001b[39m, \u001b[38;5;241m0\u001b[39m), pygame\u001b[38;5;241m.\u001b[39mRect(\u001b[38;5;241m0\u001b[39m, \u001b[38;5;241m0\u001b[39m, width, height))\n\u001b[0;32m    371\u001b[0m \u001b[38;5;66;03m# accept input\u001b[39;00m\n\u001b[1;32m--> 372\u001b[0m c, theta, phi, psi \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;43minput\u001b[39;49m\u001b[43m(\u001b[49m\u001b[43mc\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mtheta\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mphi\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mpsi\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m    373\u001b[0m \u001b[38;5;66;03m# set framerate\u001b[39;00m\n\u001b[0;32m    374\u001b[0m clock\u001b[38;5;241m.\u001b[39mtick(\u001b[38;5;241m60\u001b[39m)\n",
+      "Cell \u001b[1;32mIn[10], line 223\u001b[0m, in \u001b[0;36minput\u001b[1;34m(c, theta, phi, psi)\u001b[0m\n\u001b[0;32m    221\u001b[0m         pygame\u001b[38;5;241m.\u001b[39mmouse\u001b[38;5;241m.\u001b[39mset_pos(width\u001b[38;5;241m/\u001b[39m\u001b[38;5;241m2\u001b[39m, height\u001b[38;5;241m/\u001b[39m\u001b[38;5;241m2\u001b[39m)\n\u001b[0;32m    222\u001b[0m \u001b[38;5;66;03m# keys held\u001b[39;00m\n\u001b[1;32m--> 223\u001b[0m keys \u001b[38;5;241m=\u001b[39m \u001b[43mpygame\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mkey\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mget_pressed\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m    224\u001b[0m \u001b[38;5;66;03m# movement forward, backward, left, right\u001b[39;00m\n\u001b[0;32m    225\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m keys[pygame\u001b[38;5;241m.\u001b[39mK_w]:\n",
       "\u001b[1;31merror\u001b[0m: video system not initialized"
      ]
     }
@@ -65,6 +65,7 @@
     "window = pygame.display.set_mode((width, height))\n",
     "pygame.display.set_caption(\"Perspective projection\")\n",
     "clock = pygame.time.Clock()\n",
+    "font = pygame.font.SysFont(\"Arial\" , 18 , bold = True)\n",
     "\n",
     "# distance from camera point to screen\n",
     "d = 200\n",
@@ -283,18 +284,18 @@
     "    keys = pygame.key.get_pressed()\n",
     "    # movement forward, backward, left, right\n",
     "    if keys[pygame.K_w]:\n",
-    "        move[2] += 5\n",
+    "        move[2] += 20\n",
     "    if keys[pygame.K_s]:\n",
-    "        move[2] -= 5\n",
+    "        move[2] -= 20\n",
     "    if keys[pygame.K_a]:\n",
-    "        move[0] -= 5\n",
+    "        move[0] -= 20\n",
     "    if keys[pygame.K_d]:\n",
-    "        move[0] += 5\n",
+    "        move[0] += 20\n",
     "    # move along y axis: space, shift\n",
     "    if keys[pygame.K_SPACE]:\n",
-    "        move[1] += 5\n",
+    "        move[1] += 20\n",
     "    if keys[pygame.K_LSHIFT]:\n",
-    "        move[1] -= 5\n",
+    "        move[1] -= 20\n",
     "    # rotate about y-axis: left, right\n",
     "    if keys[pygame.K_LEFT]:\n",
     "        phi -= 0.1\n",
@@ -339,6 +340,15 @@
     "    c += move\n",
     "\n",
     "    return c, theta, phi, psi\n",
+    "\n",
+    "def framerate_counter():\n",
+    "    \"\"\"Calculate and display frames per second.\"\"\"\n",
+    "    # get fps\n",
+    "    fps = str(int(clock.get_fps()))\n",
+    "    # create text\n",
+    "    fps_t = font.render(fps , 1, colours[\"green\"])\n",
+    "    # display on screen\n",
+    "    window.blit(fps_t,(0,0))\n",
     "\n",
     "def get_colours(n):\n",
     "    \"\"\"\n",
@@ -387,11 +397,11 @@
     "            triangles.append([(200 * i, heights[i, j], 200 * j),\n",
     "                              (200 * i, heights[i, j + 1], 200 * (j + 1)),\n",
     "                              (200 * (i + 1), heights[i + 1, j + 1], 200 * (j + 1)),\n",
-    "                              colours[\"red\"]])\n",
+    "                              colours[\"blue\"]])\n",
     "            triangles.append([(200 * i, heights[i, j], 200 * j),\n",
     "                              (200 * (i + 1), heights[i + 1, j], 200 * j),\n",
     "                              (200 * (i + 1), heights[i + 1, j + 1], 200 * (j + 1)),\n",
-    "                              colours[\"orange\"]])\n",
+    "                              colours[\"purple\"]])\n",
     "\n",
     "def centroid_dist(poly):\n",
     "    \"\"\"\n",
@@ -410,7 +420,7 @@
     "#triangles.append([[100, 0, 500], [500, 400, 500], [900, 0, 500], colours[\"red\"]])\n",
     "\n",
     "# add cube grid\n",
-    "#cube_grid(4, 4)\n",
+    "# cube_grid(4, 4)\n",
     "\n",
     "# add triangle grid\n",
     "height_plane(20, 20)\n",
@@ -424,6 +434,8 @@
     "    # set framerate\n",
     "    clock.tick(60)\n",
     "    #print(clock.get_fps())\n",
+    "    # show fps\n",
+    "    framerate_counter()\n",
     "    \"\"\"\n",
     "    k = 0\n",
     "    # grid of columns: slight offset to prevent zero errors\n",
@@ -454,6 +466,13 @@
     "    pygame.event.pump()\n",
     "    pygame.display.update()\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
